--- a/libraries/version/src/version_impl.cpp.in
+++ b/libraries/version/src/version_impl.cpp.in
@@ -8,21 +8,29 @@
 
 namespace eosio { namespace version {
 
-   const std::string version_major {"@_VERSION_MAJOR_@"};
-   const std::string version_minor {"@_VERSION_MINOR_@"};
-   const std::string version_patch {"@_VERSION_PATCH_@"};
+   const std::string version_major {"@_VERSION_MAJOR_@" };
+   const std::string version_minor {"@_VERSION_MINOR_@" };
+   const std::string version_patch {"@_VERSION_PATCH_@" };
    const std::string version_suffix{"@_VERSION_SUFFIX_@"};
-   const std::string version_hash  {"@_VERSION_HASH_@"};
-   const std::string version_dirty {"@_VERSION_DIRTY_@"};
+   const std::string version_hash  {"@_VERSION_HASH_@"  };
+   const bool        version_dirty { @_VERSION_DIRTY_@  };
 
    const std::string& _version_client() {
-      static const std::string version{'v'+version_major+'.'+version_minor+'.'+version_patch+'-'+version_suffix};
+      static const std::string version{'v' + version_major +
+                                       '.' + version_minor +
+                                       '.' + version_patch +
+                                       '-' + version_suffix};
       return version;
    }
 
    const std::string& _version_full() {
-      static const std::string version{'v'+version_major+'.'+version_minor+'.'+version_patch+'-'+version_suffix+'-'+version_hash+version_dirty};
+      static const std::string version{'v' + version_major  +
+                                       '.' + version_minor  +
+                                       '.' + version_patch  +
+                                       '-' + version_suffix +
+                                       '-' + version_hash   +
+                                       '-' + ((version_dirty == true) ? ("true") : ("false"))};
       return version;
    }
-      
+
 } }
