pipeline.jsonc changes

--- a/pipeline.jsonc
+++ b/pipeline.jsonc
@@ -1,10 +1,6 @@
 {
     "eosio": {
-        "pipeline-branch": "support-for-improvements",
-        "environment": {
-            "IMAGE_TAG": "1.8.x",
-            "DEBUG": true
-        }
+        "pipeline-branch": "support-for-improvements"
     },
     "eosio-base-images": {
         "pipeline-branch": "1.8.x-bash-scripts"
