check in cmake if compiler is different than previous build
and stop building until the user acknowledges

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,6 +117,7 @@ if(ENABLE_COVERAGE_TESTING)
 endif()
 
 include(utils)
+include(version-check)
 
 if ("${CORE_SYMBOL_NAME}" STREQUAL "")
   set( CORE_SYMBOL_NAME "SYS" )
