pipeline.jsonc and LOCAL_CMAKE removals

--- a/pipeline.jsonc
+++ b/pipeline.jsonc
@@ -1,4 +1,9 @@
 {
+    "eosio": {
+        "environment": {
+            "IMAGE_TAG": "_1.9.0-develop"
+        }
+    },
     "eosio-build-unpinned": {
         "pipeline-branch": "protocol-features-sync-nodes"
     },
