--- a/pipeline.jsonc
+++ b/pipeline.jsonc
@@ -1,7 +1,7 @@
 {
     "eosio": {
         "environment": {
-            "IMAGE_TAG": "_1.9.0-develop",
+            "IMAGE_TAG": "1.9.0-develop",
             "HELPER_ENABLED": true
         }
     },
