--- a/pipeline.jsonc
+++ b/pipeline.jsonc
@@ -1,7 +1,7 @@
 {
     "eosio": {
         "environment": {
-            "IMAGE_TAG": "1-8-0-rc2",
+            "IMAGE_TAG": "1.8.0-rc2",
             "HELPER_ENABLED": true
         }
     },
