* made unit tests run against contracts/ * added dependencies to build required contracts for unit tests * fixed unit tests, primaraly issue related to call of issue action directly to test account instead of issuer

--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -43,6 +43,8 @@ add_executable( unit_test ${UNIT_TESTS}) # build unit tests as one executable
 
 target_link_libraries( unit_test eosio_chain chainbase eosio_testing fc appbase ${PLATFORM_SPECIFIC_LIBS} )
 
+add_dependencies( unit_test contracts_project test_contracts_project)
+
 target_compile_options(unit_test PUBLIC -DDISABLE_EOSLIB_SERIALIZE)
 target_include_directories( unit_test PUBLIC
                             ${CMAKE_SOURCE_DIR}/libraries/testing/include
