--- a/pipeline.jsonc
+++ b/pipeline.jsonc
@@ -5,12 +5,8 @@
             "DEBUG": true
         }
     },
-    "eosio-build-unpinned":
-    {
-        "environment": {
-            "IMAGE_TAG": "1.9.0-develop",
-            "HELPER_ENABLED": true
-        }
+    "eosio-build-unpinned": {
+        "pipeline-branch": "protocol-features-sync-nodes"
     },
     "eosio-lrt": {
         "pipeline-branch": "protocol-features-sync-nodes"
