--- a/pipeline.jsonc
+++ b/pipeline.jsonc
@@ -1,8 +1,10 @@
 {
-    "eosio": {
-        "environment": {
-            "IMAGE_TAG": "1.9.0-develop",
-            "HELPER_ENABLED": true
+    "eosio":
+    {
+        "environment":
+        {
+            "HELPER_ENABLED": true,
+            "IMAGE_TAG": "1.9.0-develop"
         }
     },
     "eosio-build-unpinned": {
