--- a/pipeline.jsonc
+++ b/pipeline.jsonc
@@ -7,11 +7,18 @@
             "IMAGE_TAG": "1.9.0-develop"
         }
     },
-    "eosio-build-unpinned": {
-        "pipeline-branch": "protocol-features-sync-nodes"
+    "eosio-build-unpinned":
+    {
+        "pipeline-branch": "master"
     },
-    "eosio-lrt": {
-        "pipeline-branch": "protocol-features-sync-nodes"
+    "eosio-lrt":
+    {
+        "pipeline-branch": "master",
+        "environment":
+        {
+            "BUILD_FLAGS": "-y -P -m",
+            "IMAGE_TAG": "_1-8-0-rc2"
+        }
     },
     "eos-multiversion-tests":
     {
