--- a/pipeline.jsonc
+++ b/pipeline.jsonc
@@ -1,6 +1,7 @@
 {
     "eosio": {
         "environment": {
+            "PIPELINE_BRANCH": "release/1.7.x",
             "IMAGE_TAG": "1.7.x-testing"
         }
     },
