--- a/libraries/version/CMakeLists.txt
+++ b/libraries/version/CMakeLists.txt
@@ -8,9 +8,6 @@ project(
 include(
   VersionUtils )
 
-# Generate the most up-to-date version metadata of the repository.
-GENERATE_VERSION_METADATA()
-
 # Construct the library.
 add_library(
    version
@@ -20,26 +17,27 @@ add_library(
 # Make dependencies visible.
 target_include_directories(
    version
-   PUBLIC
-   "${CMAKE_CURRENT_SOURCE_DIR}/include/"
-   PRIVATE
-   "${CMAKE_CURRENT_SOURCE_DIR}/src/" )
+   PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/"
+   PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src/" )
 
 # Install the library in the appropriate places.
 install(
-   TARGETS
-   version
-   RUNTIME DESTINATION ${CMAKE_INSTALL_FULL_BINDIR}   ### Is this needed? It's just a library?
-   ARCHIVE DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}   ### Is this needed as both a static and dynamic lib?
-   LIBRARY DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR} ) ### ...
+   TARGETS version
+   RUNTIME DESTINATION ${CMAKE_INSTALL_FULL_BINDIR}
+   ARCHIVE DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}
+   LIBRARY DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR} )
 
 # Install the header file in the appropriate place.
 install(
-   DIRECTORY
-   ${CMAKE_CURRENT_SOURCE_DIR}/include/eosio/version
-   DESTINATION
-   ${CMAKE_INSTALL_FULL_INCLUDEDIR}/eosio/
+   DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/eosio/version
+   DESTINATION ${CMAKE_INSTALL_FULL_INCLUDEDIR}/eosio/
    FILES_MATCHING PATTERN "*.hpp" )
+
+# Generate the most up-to-date version metadata of the repository.
+add_custom_command(
+   TARGET version
+   PRE_BUILD
+   COMMAND ${CMAKE_COMMAND} -P ${CMAKE_SOURCE_DIR}/CMakeModules/VersionUtils.cmake)
 
 # Modify and substitute the `.cpp.in` file for a `.cpp` in the build directory.
 configure_file(
