--- a/libraries/version/CMakeLists.txt
+++ b/libraries/version/CMakeLists.txt
@@ -2,7 +2,10 @@ cmake_minimum_required(
   VERSION 3.5 )
 
 project(
-  Version )
+   Version
+   VERSION      0.0.0.1
+   DESCRIPTION  "This library determines the current version in which the target was built"
+   HOMEPAGE_URL "https://eos.io/" )
 
 # Found in directory `eos/CMakeModules/`.
 include(
@@ -17,7 +20,7 @@ add_library(
 # Make dependencies visible.
 target_include_directories(
    version
-   PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/"
+   PUBLIC  "${CMAKE_CURRENT_SOURCE_DIR}/include/"
    PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src/" )
 
 # Install the library in the appropriate places.
@@ -29,15 +32,19 @@ install(
 
 # Install the header file in the appropriate place.
 install(
-   DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/eosio/version
+   DIRECTORY   ${CMAKE_CURRENT_SOURCE_DIR}/include/eosio/version
    DESTINATION ${CMAKE_INSTALL_FULL_INCLUDEDIR}/eosio/
    FILES_MATCHING PATTERN "*.hpp" )
 
-# Generate the most up-to-date version metadata of the repository.
-add_custom_command(
-   TARGET version
-   PRE_BUILD
-   COMMAND ${CMAKE_COMMAND} -P ${CMAKE_SOURCE_DIR}/CMakeModules/VersionUtils.cmake)
+# Generate the most up-to-date version metadata of the repository on every build.
+add_custom_target(
+   on_every_build
+   COMMAND ${CMAKE_COMMAND} -P ${CMAKE_SOURCE_DIR}/CMakeModules/VersionUtils.cmake )
+
+# ...
+add_dependencies(
+   version
+   on_every_build )
 
 # Modify and substitute the `.cpp.in` file for a `.cpp` in the build directory.
 configure_file(
