--- a/pipeline.jsonc
+++ b/pipeline.jsonc
@@ -7,6 +7,13 @@
             "IMAGE_TAG": "1.9.0-develop"
         }
     },
+    "eosio-build-unpinned":
+    {
+        "environment":
+        {
+            "HELPER_ENABLED": true
+        }
+    },
     "eosio-lrt":
     {
         "environment":
