* we need to compile always test_contracts

--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -3,6 +3,7 @@ find_package( Gperftools QUIET )
 ### Build contracts with cdt if available ###
 include(ExternalProject)
 
+set(EOSIO_COMPILE_TEST_CONTRACTS true)
 if( EOSIO_COMPILE_TEST_CONTRACTS )
    set(EOSIO_WASM_OLD_BEHAVIOR "Off")
    find_package(eosio.cdt REQUIRED)
